--- a/keyboard.toml
+++ b/keyboard.toml
@@ -8,9 +8,9 @@ manufacturer = "haobo"
 chip = "nrf52840"
 
 [matrix]
-# Input and output pins are mandatory
-input_pins = ["PIN_6", "PIN_7", "PIN_8", "PIN_9"]
-output_pins = ["PIN_19", "PIN_20", "PIN_21"]
+# Row and col pins are mandatory
+row_pins = ["P0_08", "P0_17", "P0_20", "P0_22"]
+col_pins = ["P0_06", "P 0_31", "P0_29", "P0_02", "P1_15", "P1_13"]
 # WARNING: Currently row2col/col2row is set in RMK's feature gate, configs here do nothing actually
 # row2col = true
 
