--- a/keyboard.toml
+++ b/keyboard.toml
@@ -9,8 +9,8 @@ chip = "nrf52840"
 
 [matrix]
 # Row and col pins are mandatory
-row_pins = ["P0_08", "P0_17", "P0_20", "P0_22"]
-col_pins = ["P0_06", "P 0_31", "P0_29", "P0_02", "P1_15", "P1_13"]
+input_pins = ["P0_08", "P0_17", "P0_20", "P0_22"]
+output_pins = ["P0_06", "P 0_31", "P0_29", "P0_02", "P1_15", "P1_13"]
 # WARNING: Currently row2col/col2row is set in RMK's feature gate, configs here do nothing actually
 # row2col = true
 
